# AtelierMarie

./: ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  ONBOARDING.md  README.md  conftest.py  package-lock.json  pyproject.toml
app/: config.py  constants.py  database.py  exceptions.py  logging_config.py  main.py
app/dependencies/: auth.py  session.py
app/middleware/: request_id.py  session.py
app/models/: __init__.py  admin.py  auth.py  cart.py  comments.py  common.py  orders.py  products.py  reactions.py  users.py
app/routes/: admin.py  auth.py  cart.py  comments.py  locale.py  orders.py  products.py  reactions.py
app/services/: admin_service.py  auth_service.py  cart_service.py  comment_service.py  image_service.py  order_service.py  product_service.py  reaction_service.py
app/utils/: blocklist.py  circuit_breaker.py  row_access.py  sanitize.py
deploy/: free-deployment-plan.md  nginx-ratelimit.conf
frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: test-utils.tsx
frontend/lib/: api.ts  (+7 more)
scripts/: seed_products.py
tests/: test_admin_routes.py  test_auth.py  test_auth_integration.py  test_cart_routes.py  test_cart_service.py  test_comment_service.py  test_database.py  test_database_constraints.py  test_day6_admin_dashboard.py  test_health.py  test_image.py  test_lifespan.py  test_locale_products.py  test_models.py  test_order_service.py  test_product_routes.py  test_product_service.py  test_reaction_service.py  test_routers.py  test_sanitize.py
(+367 files in other folders)
